[gd_scene load_steps=3 format=3 uid="uid://cqb5y8h3n4m6p"]

[ext_resource type="Script" path="res://scenes/ui/action_menu.gd" id="1_action_menu"]
[ext_resource type="FontFile" path="res://assets/fonts/monogram.ttf" id="2_font"]

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 100.0
script = ExtResource("1_action_menu")

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.8, 0.9, 1)
metadata/_edit_use_anchors_ = true

[node name="InnerPanel" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveButton" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Move"

[node name="AttackButton" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Attack"

[node name="MagicButton" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Magic"

[node name="ItemButton" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Item"

[node name="StayButton" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Stay"
